adaptapi/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    UMINUS

Grammar

Rule 0     S' -> program
Rule 1     program -> FUNC INIT LPAREN RPAREN { statements }
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> IDENTIFIER EQUAL expression
Rule 5     statement -> IDENTIFIER EQUAL ACCEPT LPAREN RPAREN
Rule 6     statement -> INT IDENTIFIER EQUAL expression
Rule 7     statement -> FLOAT IDENTIFIER EQUAL expression
Rule 8     statement -> STR IDENTIFIER EQUAL expression
Rule 9     statement -> ADAPT IDENTIFIER EQUAL expression
Rule 10    statement -> expression
Rule 11    statement -> PRINT LPAREN expression RPAREN
Rule 12    statement -> PRINT LPAREN STRING_VALUE RPAREN
Rule 13    statement -> RETURN expression
Rule 14    expression -> expression ADD expression
Rule 15    expression -> expression SUB expression
Rule 16    expression -> expression DIV expression
Rule 17    expression -> expression MUL expression
Rule 18    expression -> SUB expression
Rule 19    expression -> LPAREN expression RPAREN
Rule 20    expression -> expression LE expression
Rule 21    expression -> expression GE expression
Rule 22    expression -> expression EQ expression
Rule 23    expression -> expression NE expression
Rule 24    expression -> expression GT expression
Rule 25    expression -> expression LT expression
Rule 26    expression -> expression AND expression
Rule 27    expression -> expression OR expression
Rule 28    expression -> expression INCREMENT
Rule 29    expression -> DECREMENT expression
Rule 30    expressions -> expressions , expression
Rule 31    expressions -> expression
Rule 32    expressions -> <empty>
Rule 33    expression -> IDENTIFIER LPAREN expressions RPAREN
Rule 34    expression -> IF LPAREN expression RPAREN { statements } ELSE { statements }
Rule 35    expression -> IF LPAREN expression RPAREN { statements }
Rule 36    expression -> INT IDENTIFIER
Rule 37    expression -> FLOAT IDENTIFIER
Rule 38    expression -> STR IDENTIFIER
Rule 39    expression -> ADAPT IDENTIFIER
Rule 40    expression -> FN IDENTIFIER LPAREN RPAREN : INT { statements }
Rule 41    expression -> FN IDENTIFIER LPAREN RPAREN : FLOAT { statements }
Rule 42    expression -> FN IDENTIFIER LPAREN RPAREN : STR { statements }
Rule 43    expression -> FN IDENTIFIER LPAREN RPAREN : VOID { statements }
Rule 44    expression -> FN IDENTIFIER LPAREN expressions RPAREN : INT { statements }
Rule 45    expression -> FN IDENTIFIER LPAREN expressions RPAREN : FLOAT { statements }
Rule 46    expression -> FN IDENTIFIER LPAREN expressions RPAREN : STR { statements }
Rule 47    expression -> FN IDENTIFIER LPAREN expressions RPAREN : VOID { statements }
Rule 48    expression -> INT_VALUE
Rule 49    expression -> FLOAT_VALUE
Rule 50    expression -> STRING_VALUE
Rule 51    expression -> IDENTIFIER
Rule 52    expression -> FOR LPAREN statement ; expression ; expression RPAREN { statements }
Rule 53    expression -> statement WHILE LPAREN expression RPAREN { statements }

Terminals, with rules where they appear

,                    : 30
:                    : 40 41 42 43 44 45 46 47
;                    : 52 52
ACCEPT               : 5
ADAPT                : 9 39
ADD                  : 14
AND                  : 26
DECREMENT            : 29
DIV                  : 16
ELSE                 : 34
EQ                   : 22
EQUAL                : 4 5 6 7 8 9
FLOAT                : 7 37 41 45
FLOAT_VALUE          : 49
FN                   : 40 41 42 43 44 45 46 47
FOR                  : 52
FUNC                 : 1
GE                   : 21
GT                   : 24
IDENTIFIER           : 4 5 6 7 8 9 33 36 37 38 39 40 41 42 43 44 45 46 47 51
IF                   : 34 35
INCREMENT            : 28
INIT                 : 1
INT                  : 6 36 40 44
INT_VALUE            : 48
LE                   : 20
LPAREN               : 1 5 11 12 19 33 34 35 40 41 42 43 44 45 46 47 52 53
LT                   : 25
MUL                  : 17
NE                   : 23
OR                   : 27
PRINT                : 11 12
RETURN               : 13
RPAREN               : 1 5 11 12 19 33 34 35 40 41 42 43 44 45 46 47 52 53
STR                  : 8 38 42 46
STRING_VALUE         : 12 50
SUB                  : 15 18
UMINUS               : 
VOID                 : 43 47
WHILE                : 53
error                : 
{                    : 1 34 34 35 40 41 42 43 44 45 46 47 52 53
}                    : 1 34 34 35 40 41 42 43 44 45 46 47 52 53

Nonterminals, with rules where they appear

expression           : 4 6 7 8 9 10 11 13 14 14 15 15 16 16 17 17 18 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 29 30 31 34 35 52 52 53
expressions          : 30 33 44 45 46 47
program              : 0
statement            : 2 3 52 53
statements           : 1 2 34 34 35 40 41 42 43 44 45 46 47 52 53

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . FUNC INIT LPAREN RPAREN { statements }

    FUNC            shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> FUNC . INIT LPAREN RPAREN { statements }

    INIT            shift and go to state 3


state 3

    (1) program -> FUNC INIT . LPAREN RPAREN { statements }

    LPAREN          shift and go to state 4


state 4

    (1) program -> FUNC INIT LPAREN . RPAREN { statements }

    RPAREN          shift and go to state 5


state 5

    (1) program -> FUNC INIT LPAREN RPAREN . { statements }

    {               shift and go to state 6


state 6

    (1) program -> FUNC INIT LPAREN RPAREN { . statements }
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . IDENTIFIER EQUAL expression
    (5) statement -> . IDENTIFIER EQUAL ACCEPT LPAREN RPAREN
    (6) statement -> . INT IDENTIFIER EQUAL expression
    (7) statement -> . FLOAT IDENTIFIER EQUAL expression
    (8) statement -> . STR IDENTIFIER EQUAL expression
    (9) statement -> . ADAPT IDENTIFIER EQUAL expression
    (10) statement -> . expression
    (11) statement -> . PRINT LPAREN expression RPAREN
    (12) statement -> . PRINT LPAREN STRING_VALUE RPAREN
    (13) statement -> . RETURN expression
    (14) expression -> . expression ADD expression
    (15) expression -> . expression SUB expression
    (16) expression -> . expression DIV expression
    (17) expression -> . expression MUL expression
    (18) expression -> . SUB expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . expression LE expression
    (21) expression -> . expression GE expression
    (22) expression -> . expression EQ expression
    (23) expression -> . expression NE expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression AND expression
    (27) expression -> . expression OR expression
    (28) expression -> . expression INCREMENT
    (29) expression -> . DECREMENT expression
    (33) expression -> . IDENTIFIER LPAREN expressions RPAREN
    (34) expression -> . IF LPAREN expression RPAREN { statements } ELSE { statements }
    (35) expression -> . IF LPAREN expression RPAREN { statements }
    (36) expression -> . INT IDENTIFIER
    (37) expression -> . FLOAT IDENTIFIER
    (38) expression -> . STR IDENTIFIER
    (39) expression -> . ADAPT IDENTIFIER
    (40) expression -> . FN IDENTIFIER LPAREN RPAREN : INT { statements }
    (41) expression -> . FN IDENTIFIER LPAREN RPAREN : FLOAT { statements }
    (42) expression -> . FN IDENTIFIER LPAREN RPAREN : STR { statements }
    (43) expression -> . FN IDENTIFIER LPAREN RPAREN : VOID { statements }
    (44) expression -> . FN IDENTIFIER LPAREN expressions RPAREN : INT { statements }
    (45) expression -> . FN IDENTIFIER LPAREN expressions RPAREN : FLOAT { statements }
    (46) expression -> . FN IDENTIFIER LPAREN expressions RPAREN : STR { statements }
    (47) expression -> . FN IDENTIFIER LPAREN expressions RPAREN : VOID { statements }
    (48) expression -> . INT_VALUE
    (49) expression -> . FLOAT_VALUE
    (50) expression -> . STRING_VALUE
    (51) expression -> . IDENTIFIER
    (52) expression -> . FOR LPAREN statement ; expression ; expression RPAREN { statements }
    (53) expression -> . statement WHILE LPAREN expression RPAREN { statements }

    IDENTIFIER      shift and go to state 10
    INT             shift and go to state 12
    FLOAT           shift and go to state 13
    STR             shift and go to state 14
    ADAPT           shift and go to state 15
    PRINT           shift and go to state 16
    RETURN          shift and go to state 18
    SUB             shift and go to state 19
    LPAREN          shift and go to state 7
    DECREMENT       shift and go to state 20
    IF              shift and go to state 21
    FN              shift and go to state 22
    INT_VALUE       shift and go to state 23
    FLOAT_VALUE     shift and go to state 24
    STRING_VALUE    shift and go to state 17
    FOR             shift and go to state 25

    statements                     shift and go to state 8
    statement                      shift and go to state 9
    expression                     shift and go to state 11

state 7

    (19) expression -> LPAREN . expression RPAREN
    (14) expression -> . expression ADD expression
    (15) expression -> . expression SUB expression
    (16) expression -> . expression DIV expression
    (17) expression -> . expression MUL expression
    (18) expression -> . SUB expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . expression LE expression
    (21) expression -> . expression GE expression
    (22) expression -> . expression EQ expression
    (23) expression -> . expression NE expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression AND expression
    (27) expression -> . expression OR expression
    (28) expression -> . expression INCREMENT
    (29) expression -> . DECREMENT expression
    (33) expression -> . IDENTIFIER LPAREN expressions RPAREN
    (34) expression -> . IF LPAREN expression RPAREN { statements } ELSE { statements }
    (35) expression -> . IF LPAREN expression RPAREN { statements }
    (36) expression -> . INT IDENTIFIER
    (37) expression -> . FLOAT IDENTIFIER
    (38) expression -> . STR IDENTIFIER
    (39) expression -> . ADAPT IDENTIFIER
    (40) expression -> . FN IDENTIFIER LPAREN RPAREN : INT { statements }
    (41) expression -> . FN IDENTIFIER LPAREN RPAREN : FLOAT { statements }
    (42) expression -> . FN IDENTIFIER LPAREN RPAREN : STR { statements }
    (43) expression -> . FN IDENTIFIER LPAREN RPAREN : VOID { statements }
    (44) expression -> . FN IDENTIFIER LPAREN expressions RPAREN : INT { statements }
    (45) expression -> . FN IDENTIFIER LPAREN expressions RPAREN : FLOAT { statements }
    (46) expression -> . FN IDENTIFIER LPAREN expressions RPAREN : STR { statements }
    (47) expression -> . FN IDENTIFIER LPAREN expressions RPAREN : VOID { statements }
    (48) expression -> . INT_VALUE
    (49) expression -> . FLOAT_VALUE
    (50) expression -> . STRING_VALUE
    (51) expression -> . IDENTIFIER
    (52) expression -> . FOR LPAREN statement ; expression ; expression RPAREN { statements }
    (53) expression -> . statement WHILE LPAREN expression RPAREN { statements }
    (4) statement -> . IDENTIFIER EQUAL expression
    (5) statement -> . IDENTIFIER EQUAL ACCEPT LPAREN RPAREN
    (6) statement -> . INT IDENTIFIER EQUAL expression
    (7) statement -> . FLOAT IDENTIFIER EQUAL expression
    (8) statement -> . STR IDENTIFIER EQUAL expression
    (9) statement -> . ADAPT IDENTIFIER EQUAL expression
    (10) statement -> . expression
    (11) statement -> . PRINT LPAREN expression RPAREN
    (12) statement -> . PRINT LPAREN STRING_VALUE RPAREN
    (13) statement -> . RETURN expression

    SUB             shift and go to state 19
    LPAREN          shift and go to state 7
    DECREMENT       shift and go to state 20
    IDENTIFIER      shift and go to state 27
    IF              shift and go to state 21
    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    STR             shift and go to state 30
    ADAPT           shift and go to state 31
    FN              shift and go to state 22
    INT_VALUE       shift and go to state 23
    FLOAT_VALUE     shift and go to state 24
    STRING_VALUE    shift and go to state 17
    FOR             shift and go to state 25
    PRINT           shift and go to state 16
    RETURN          shift and go to state 18

    expression                     shift and go to state 26
    statement                      shift and go to state 32

state 8

    (1) program -> FUNC INIT LPAREN RPAREN { statements . }
    (2) statements -> statements . statement
    (4) statement -> . IDENTIFIER EQUAL expression
    (5) statement -> . IDENTIFIER EQUAL ACCEPT LPAREN RPAREN
    (6) statement -> . INT IDENTIFIER EQUAL expression
    (7) statement -> . FLOAT IDENTIFIER EQUAL expression
    (8) statement -> . STR IDENTIFIER EQUAL expression
    (9) statement -> . ADAPT IDENTIFIER EQUAL expression
    (10) statement -> . expression
    (11) statement -> . PRINT LPAREN expression RPAREN
    (12) statement -> . PRINT LPAREN STRING_VALUE RPAREN
    (13) statement -> . RETURN expression
    (14) expression -> . expression ADD expression
    (15) expression -> . expression SUB expression
    (16) expression -> . expression DIV expression
    (17) expression -> . expression MUL expression
    (18) expression -> . SUB expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . expression LE expression
    (21) expression -> . expression GE expression
    (22) expression -> . expression EQ expression
    (23) expression -> . expression NE expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression AND expression
    (27) expression -> . expression OR expression
    (28) expression -> . expression INCREMENT
    (29) expression -> . DECREMENT expression
    (33) expression -> . IDENTIFIER LPAREN expressions RPAREN
    (34) expression -> . IF LPAREN expression RPAREN { statements } ELSE { statements }
    (35) expression -> . IF LPAREN expression RPAREN { statements }
    (36) expression -> . INT IDENTIFIER
    (37) expression -> . FLOAT IDENTIFIER
    (38) expression -> . STR IDENTIFIER
    (39) expression -> . ADAPT IDENTIFIER
    (40) expression -> . FN IDENTIFIER LPAREN RPAREN : INT { statements }
    (41) expression -> . FN IDENTIFIER LPAREN RPAREN : FLOAT { statements }
    (42) expression -> . FN IDENTIFIER LPAREN RPAREN : STR { statements }
    (43) expression -> . FN IDENTIFIER LPAREN RPAREN : VOID { statements }
    (44) expression -> . FN IDENTIFIER LPAREN expressions RPAREN : INT { statements }
    (45) expression -> . FN IDENTIFIER LPAREN expressions RPAREN : FLOAT { statements }
    (46) expression -> . FN IDENTIFIER LPAREN expressions RPAREN : STR { statements }
    (47) expression -> . FN IDENTIFIER LPAREN expressions RPAREN : VOID { statements }
    (48) expression -> . INT_VALUE
    (49) expression -> . FLOAT_VALUE
    (50) expression -> . STRING_VALUE
    (51) expression -> . IDENTIFIER
    (52) expression -> . FOR LPAREN statement ; expression ; expression RPAREN { statements }
    (53) expression -> . statement WHILE LPAREN expression RPAREN { statements }

    }               shift and go to state 33
    IDENTIFIER      shift and go to state 10
    INT             shift and go to state 12
    FLOAT           shift and go to state 13
    STR             shift and go to state 14
    ADAPT           shift and go to state 15
    PRINT           shift and go to state 16
    RETURN          shift and go to state 18
    SUB             shift and go to state 19
    LPAREN          shift and go to state 7
    DECREMENT       shift and go to state 20
    IF              shift and go to state 21
    FN              shift and go to state 22
    INT_VALUE       shift and go to state 23
    FLOAT_VALUE     shift and go to state 24
    STRING_VALUE    shift and go to state 17
    FOR             shift and go to state 25

    statement                      shift and go to state 34
    expression                     shift and go to state 11

state 9

    (3) statements -> statement .
    (53) expression -> statement . WHILE LPAREN expression RPAREN { statements }

    }               reduce using rule 3 (statements -> statement .)
    IDENTIFIER      reduce using rule 3 (statements -> statement .)
    INT             reduce using rule 3 (statements -> statement .)
    FLOAT           reduce using rule 3 (statements -> statement .)
    STR             reduce using rule 3 (statements -> statement .)
    ADAPT           reduce using rule 3 (statements -> statement .)
    PRINT           reduce using rule 3 (statements -> statement .)
    RETURN          reduce using rule 3 (statements -> statement .)
    SUB             reduce using rule 3 (statements -> statement .)
    LPAREN          reduce using rule 3 (statements -> statement .)
    DECREMENT       reduce using rule 3 (statements -> statement .)
    IF              reduce using rule 3 (statements -> statement .)
    FN              reduce using rule 3 (statements -> statement .)
    INT_VALUE       reduce using rule 3 (statements -> statement .)
    FLOAT_VALUE     reduce using rule 3 (statements -> statement .)
    STRING_VALUE    reduce using rule 3 (statements -> statement .)
    FOR             reduce using rule 3 (statements -> statement .)
    WHILE           shift and go to state 35


state 10

    (4) statement -> IDENTIFIER . EQUAL expression
    (5) statement -> IDENTIFIER . EQUAL ACCEPT LPAREN RPAREN
    (33) expression -> IDENTIFIER . LPAREN expressions RPAREN
    (51) expression -> IDENTIFIER .

  ! shift/reduce conflict for LPAREN resolved as shift
    EQUAL           shift and go to state 36
    LPAREN          shift and go to state 37
    ADD             reduce using rule 51 (expression -> IDENTIFIER .)
    SUB             reduce using rule 51 (expression -> IDENTIFIER .)
    DIV             reduce using rule 51 (expression -> IDENTIFIER .)
    MUL             reduce using rule 51 (expression -> IDENTIFIER .)
    LE              reduce using rule 51 (expression -> IDENTIFIER .)
    GE              reduce using rule 51 (expression -> IDENTIFIER .)
    EQ              reduce using rule 51 (expression -> IDENTIFIER .)
    NE              reduce using rule 51 (expression -> IDENTIFIER .)
    GT              reduce using rule 51 (expression -> IDENTIFIER .)
    LT              reduce using rule 51 (expression -> IDENTIFIER .)
    AND             reduce using rule 51 (expression -> IDENTIFIER .)
    OR              reduce using rule 51 (expression -> IDENTIFIER .)
    INCREMENT       reduce using rule 51 (expression -> IDENTIFIER .)
    WHILE           reduce using rule 51 (expression -> IDENTIFIER .)
    }               reduce using rule 51 (expression -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 51 (expression -> IDENTIFIER .)
    INT             reduce using rule 51 (expression -> IDENTIFIER .)
    FLOAT           reduce using rule 51 (expression -> IDENTIFIER .)
    STR             reduce using rule 51 (expression -> IDENTIFIER .)
    ADAPT           reduce using rule 51 (expression -> IDENTIFIER .)
    PRINT           reduce using rule 51 (expression -> IDENTIFIER .)
    RETURN          reduce using rule 51 (expression -> IDENTIFIER .)
    DECREMENT       reduce using rule 51 (expression -> IDENTIFIER .)
    IF              reduce using rule 51 (expression -> IDENTIFIER .)
    FN              reduce using rule 51 (expression -> IDENTIFIER .)
    INT_VALUE       reduce using rule 51 (expression -> IDENTIFIER .)
    FLOAT_VALUE     reduce using rule 51 (expression -> IDENTIFIER .)
    STRING_VALUE    reduce using rule 51 (expression -> IDENTIFIER .)
    FOR             reduce using rule 51 (expression -> IDENTIFIER .)
    ;               reduce using rule 51 (expression -> IDENTIFIER .)

  ! LPAREN          [ reduce using rule 51 (expression -> IDENTIFIER .) ]


state 11

    (10) statement -> expression .
    (14) expression -> expression . ADD expression
    (15) expression -> expression . SUB expression
    (16) expression -> expression . DIV expression
    (17) expression -> expression . MUL expression
    (20) expression -> expression . LE expression
    (21) expression -> expression . GE expression
    (22) expression -> expression . EQ expression
    (23) expression -> expression . NE expression
    (24) expression -> expression . GT expression
    (25) expression -> expression . LT expression
    (26) expression -> expression . AND expression
    (27) expression -> expression . OR expression
    (28) expression -> expression . INCREMENT

  ! shift/reduce conflict for SUB resolved as shift
    WHILE           reduce using rule 10 (statement -> expression .)
    }               reduce using rule 10 (statement -> expression .)
    IDENTIFIER      reduce using rule 10 (statement -> expression .)
    INT             reduce using rule 10 (statement -> expression .)
    FLOAT           reduce using rule 10 (statement -> expression .)
    STR             reduce using rule 10 (statement -> expression .)
    ADAPT           reduce using rule 10 (statement -> expression .)
    PRINT           reduce using rule 10 (statement -> expression .)
    RETURN          reduce using rule 10 (statement -> expression .)
    LPAREN          reduce using rule 10 (statement -> expression .)
    DECREMENT       reduce using rule 10 (statement -> expression .)
    IF              reduce using rule 10 (statement -> expression .)
    FN              reduce using rule 10 (statement -> expression .)
    INT_VALUE       reduce using rule 10 (statement -> expression .)
    FLOAT_VALUE     reduce using rule 10 (statement -> expression .)
    STRING_VALUE    reduce using rule 10 (statement -> expression .)
    FOR             reduce using rule 10 (statement -> expression .)
    ;               reduce using rule 10 (statement -> expression .)
    ADD             shift and go to state 38
    SUB             shift and go to state 39
    DIV             shift and go to state 40
    MUL             shift and go to state 41
    LE              shift and go to state 42
    GE              shift and go to state 43
    EQ              shift and go to state 44
    NE              shift and go to state 45
    GT              shift and go to state 46
    LT              shift and go to state 47
    AND             shift and go to state 48
    OR              shift and go to state 49
    INCREMENT       shift and go to state 50

  ! SUB             [ reduce using rule 10 (statement -> expression .) ]


state 12

    (6) statement -> INT . IDENTIFIER EQUAL expression
    (36) expression -> INT . IDENTIFIER

    IDENTIFIER      shift and go to state 51


state 13

    (7) statement -> FLOAT . IDENTIFIER EQUAL expression
    (37) expression -> FLOAT . IDENTIFIER

    IDENTIFIER      shift and go to state 52


state 14

    (8) statement -> STR . IDENTIFIER EQUAL expression
    (38) expression -> STR . IDENTIFIER

    IDENTIFIER      shift and go to state 53


state 15

    (9) statement -> ADAPT . IDENTIFIER EQUAL expression
    (39) expression -> ADAPT . IDENTIFIER

    IDENTIFIER      shift and go to state 54


state 16

    (11) statement -> PRINT . LPAREN expression RPAREN
    (12) statement -> PRINT . LPAREN STRING_VALUE RPAREN

    LPAREN          shift and go to state 55


state 17

    (50) expression -> STRING_VALUE .
